--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "framer-motion": "^12.4.4",
     "next": "15.1.7",
     "openai": "^4.85.3",
