--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "framer-motion": "^12.4.4",
+    "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "openai": "^4.85.3",
     "react": "^19.0.0",
