--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.8.1",
     "framer-motion": "^12.4.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
