--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "openai": "^4.85.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "sweetalert2": "^11.17.2"
